Fix #32618: cycles multithreaded image loading could crash with CUDA, was a threading issue that happens once every X frames.